Fix margins and alignment on home page.

--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* sahil code below */
-.line-graph {
-	/* max-width: clamp(200px, 100vw, 1500px); */
-	/* margin: auto; */
-	/* width: 500px; */
-}
-
 @layer components {
 	.hero-title {
 		@apply font-bold text-6xl text-pink-600 text-center mb-5;
